--- a/PMS-PropertyHapa.Admin/Views/Account/ChangePassword.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/ChangePassword.cshtml
@@ -11,8 +11,8 @@
                 <div class="col-12">
                     <h3>Change Password</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="/Account/ChangePassword"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Account</li>
                         <li class="breadcrumb-item active">Change Password</li>
                     </ol>
                 </div>
