--- a/PMS-PropertyHapa.Admin/Views/Admin/Update.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Admin/Update.cshtml
@@ -10,9 +10,9 @@
                 <div class="col-12">
                     <h3>Update Profile</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboard</li>
-                        <li class="breadcrumb-item active">Update Profile</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="@Url.Action("Update", "Admin")"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Admin</li>
+                        <li class="breadcrumb-item active">Update</li>
                     </ol>
                 </div>
             </div>
