--- a/PMS-PropertyHapa.Admin/Views/Groups/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Groups/Index.cshtml
@@ -10,8 +10,8 @@
                 <div class="col-12">
                     <h3>Roles List</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="/Groups"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Role</li>
                         <li class="breadcrumb-item active">Roles</li>
                     </ol>
                 </div>
