--- a/PMS-PropertyHapa/Views/Auth/ForgotPassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ForgotPassword.cshtml
@@ -1,10 +1,9 @@
 ﻿@model PMS_PropertyHapa.Models.DTO.ForgetPassword
 @{
     ViewData["Title"] = "Forgot Password";
-    Layout = "~/Views/Shared/_IdentityLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(function () {
@@ -45,11 +44,11 @@
         });
     </script>
 
-}
+
 
 
 <form class="theme-form register-form needs-validation" id="forgotPasswordForm" novalidate="" method="post">
-    <div class="container border p-4">
+    <div class="container-fluid border p-4">
         <div class="row text-center">
             <h1>Forgot Password</h1>
         </div>
@@ -58,7 +57,7 @@
         </div>
         <div class="row">
             <div class="col-6 offset-3 pb-2">
-                <input asp-for="Email" type="email" class="form-control" placeholder="Email..." />
+                <input asp-for="Email" type="email" class="form-control" width="80px" placeholder="Email..." />
             </div>
             <div class="col-6 offset-3 pb-2">
                 <button type="submit" class="form-control btn-success" value="Submit">Reset Password</button>
