--- a/PMS-PropertyHapa/Views/Auth/UpdateProfile.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/UpdateProfile.cshtml
@@ -24,9 +24,9 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboars</li>
-                        <li class="breadcrumb-item active">User Edit</li>
+                        <li class="breadcrumb-item"><a href="/auth/UpdateProfile"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Auth</li>
+                        <li class="breadcrumb-item active">UpdateProfile</li>
                     </ol>
                 </div>
             </div>
