--- a/PMS-PropertyHapa/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/Index.cshtml
@@ -13,9 +13,9 @@
                 <div class="col-12">
                     <h3>Roles List</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboard</li>
-                        <li class="breadcrumb-item active">Roles</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="/Tenant/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Tenant</li>
+                        <li class="breadcrumb-item active">Index</li>
                     </ol>
                 </div>
             </div>
