--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -39,6 +39,14 @@
             </div>
         </div>
     </div>
+    <div class="form-group">
+        <div class="icheck-primary">
+            <input type="checkbox" id="remember" asp-for="Remember">
+            <label class="text-muted" for="remember" style="color:black!important">
+                Remember Me
+            </label>
+        </div>
+    </div>
     <div>
         <div class="icheck-primary">
 
