--- a/PMS-PropertyHapa.Admin/Views/GroupRoles/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/GroupRoles/Index.cshtml
@@ -10,9 +10,9 @@
                 <div class="col-12">
                     <h3>App Pages List</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboard</li>
-                        <li class="breadcrumb-item active">App Pages</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="/GroupRoles"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">GroupRole</li>
+                        <li class="breadcrumb-item active">Group Roles</li>
                     </ol>
                 </div>
             </div>
