--- a/PMS-PropertyHapa/Views/Auth/ChangePassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ChangePassword.cshtml
@@ -2,11 +2,10 @@
 
 @{
     ViewData["Title"] = "Change Password";
-    Layout = "~/Views/Shared/_IdentityLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
-@section Scripts {
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(function () {
@@ -17,9 +16,9 @@
                 formData.append('UserId', localStorage.getItem('userId'));
                 formData.append('currentPassword', $('#currentPassword').val());
                 formData.append('newPassword', $('#newPassword').val());
-                formData.append('newRepeatPassword', $('#confirmPassword').val());
+                formData.append('newRepeatPassword', $('#newRepeatPassword').val());
 
-                if ($('#newPassword').val() !== $('#confirmPassword').val()) {
+                if ($('#newPassword').val() !== $('#newRepeatPassword').val()) {
                     var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
                     Toast.fire({ icon: 'error', title: 'New password and confirmation password do not match.' });
                     return;
@@ -44,25 +43,52 @@
         });
     </script>
 
-}
 
 
-<form class="theme-form needs-validation changePasswordForm" novalidate="" method="post">
+<div class="page-body">
+    <div class="container-fluid">
+        <div class="page-title">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Change Password</h3>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a class="home-item" href="/auth/ChangePassword"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Auth</li>
+                        <li class="breadcrumb-item active">Change Password</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="theme-form needs-validation">
+                            <form asp-action="ChangePassword" asp-controller="Account" method="post" id="changePasswordForm">
+                                <div class="form-group">
+                                    <label for="currentPassword">Current Password:</label>
+                                    <input type="password" asp-for="currentPassword" class="form-control" id="currentPassword" name="currentPassword" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="newPassword">New Password:</label>
+                                    <input type="password" asp-for="newPassword" class="form-control" id="newPassword" name="newPassword" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="confirmPassword">Confirm New Password:</label>
+                                    <input type="password" asp-for="newRepeatPassword" class="form-control" id="newRepeatPassword" name="newRepeatPassword" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Change Password</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <h2>Change Password</h2>
-    <div class="form-group mb-3">
-        <label for="currentPassword">Current Password:</label>
-        <input type="password" class="form-control" id="currentPassword" name="currentPassword" required>
-    </div>
-    <div class="form-group mb-3">
-        <label for="newPassword">New Password:</label>
-        <input type="password" class="form-control" id="newPassword" name="newPassword" required>
-    </div>
-    <div class="form-group mb-3">
-        <label for="confirmPassword">Confirm New Password:</label>
-        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
-    </div>
-    <div class="form-group">
-        <button class="btn btn-primary btn-block" type="submit">Change Password</button>
-    </div>
-</form>
+
+
+        
