--- a/PMS-PropertyHapa/Views/User/Index.cshtml
+++ b/PMS-PropertyHapa/Views/User/Index.cshtml
@@ -26,8 +26,8 @@
                 <div class="col-12">
                     <h3>App Tenant List</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item"><a class="home-item" href="/User/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">User</li>
                         <li class="breadcrumb-item active">App Tenant</li>
                     </ol>
                 </div>
@@ -35,99 +35,16 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row">
+       @*  <div class="row">
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header align-items-center d-flex">
                         <h4 class="card-title mb-0 flex-grow-1">Create New Tenant</h4>
                     </div>
-                    <div class="card-body">
-                        <div class="live-preview">
-                            <div class="row gy-4">
-                                <!--end col-->
-                              @*   <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label>First Name:&nbsp;<span style="color:red!important"><b>*</b></span></label>
-                                        <input asp-for="FirstName" class="form-control" placeholder="Enter First Name"  />
-                                        <span asp-validation-for="FirstName" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                                <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label asp-for="LastName"></label>
-                                        <input asp-for="LastName" class="form-control" placeholder="Enter Last Name"  />
-                                        <span asp-validation-for="LastName" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                                <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label>User Name:&nbsp;<span style="color:red!important"><b>*</b></span></label>
-                                        <input asp-for="UserName" class="form-control" placeholder="Please Enter Username" autocomplete="off" />
-                                        <span asp-validation-for="UserName" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                                <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label>Email:&nbsp;<span style="color:red!important"><b>*</b></span></label>
-                                        <div class="form-icon right">
-                                            <input type="email" class="form-control form-control-icon" asp-for="Email" placeholder="example@gmail.com">
-                                            <i class="ri-mail-unread-line"></i>
-                                        </div>
-                                        <span asp-validation-for="Email" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                                <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label>Password:&nbsp;<span style="color:red!important"><b>*</b></span></label>
-                                        <div class="form-icon right">
-                                            <input asp-for="Password" class="form-control form-control-icon" placeholder="Ex: Test@123" value="Pass@123" />
-                                            <i class="ri-lock-password-line"></i>
-                                        </div>
-                                        <span asp-validation-for="Password" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                                <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label asp-for="BirthDate"></label>
-                                        <div class="form-icon right">
-                                            <input name="BirthDate" id="BirthDate" type="date" class="form-control" />
-                                        </div>
-                                        <span asp-validation-for="BirthDate" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label>PhoneNumber:&nbsp;<span style="color:red!important"><b>*</b></span></label>
-                                        <div class="form-icon right">
-                                            <input asp-for="PhoneNumber" class="form-control form-control-icon" placeholder="Please Enter Phone Number" type="number" />
-                                            <i class="ri-phone-line"></i>
-                                        </div>
-                                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                                    </div>
-                                </div> *@
-                              @*   <div class="col-xxl-3 col-md-6">
-                                    <div>
-                                        <label>Role</label>
-                                        <select asp-for="Group" class="form-control"></select>
-                                    </div>
-                                </div> *@
-                                <div class="col-xxl-3 col-md-6">
-                                    <div style="padding-top: 26px;">
-                                        <button type="button" onclick="ProfileUpdate();" class="btn btn-success">Create Tenant</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--end row-->
-                        </div>
-                    </div>
+                 
                 </div>
-            </div>                <!--end col-->
-        </div>
+            </div>               
+        </div> *@
         <div class="row">
             <div class="col-xl-12 col-lg-12">
                 <div class="card">
@@ -152,7 +69,7 @@
                                                         <button type="button" onclick="SearchFilter();" class="btn btn-success">Search</button>
                                                     </div>
                                                 </div>
-                                                <div class="col-xxl-2 col-md-2">
+                                                <div class="col-xxl-2 col-md-2 ml-4">
                                                     <div>
                                                         <button type="button" onclick="Refresh();" class="btn btn-success">Reset Filter</button>
                                                     </div>
