--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -10,12 +10,13 @@
 
     .show-hide {
         position: absolute;
-        right: 10px; /* Adjust as needed */
+        right: 35px; 
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
     }
 </style>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 
