--- a/PMS-PropertyHapa/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Login.cshtml
@@ -10,7 +10,7 @@
 
     .show-hide {
         position: absolute;
-        right: 10px; /* Adjust as needed */
+        right: 35px;
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
