--- a/PMS-PropertyHapa.Admin/Views/Payments/DuePayments.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Payments/DuePayments.cshtml
@@ -1,14 +1,15 @@
 ﻿
 @{
-    ViewData["Title"] = "QuickBookIntegration";
+    ViewData["Title"] = "DuePayments";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <div class="page-body">
     <div class="container-fluid">
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Coming Soon</h3>
+                    <h3>Due Payments</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Coming Soon</li>
@@ -152,5 +153,3 @@
         </div>
     </div>
 </div>
-
-
