--- a/PMS-PropertyHapa.Admin/Views/Payments/UnPiadPayments.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Payments/UnPiadPayments.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "UnPiadPayments";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,7 +9,7 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Coming Soon</h3>
+                    <h3>Un-Piad Payments</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Coming Soon</li>
@@ -153,5 +153,3 @@
         </div>
     </div>
 </div>
-
-
