--- a/PMS-PropertyHapa.Admin/Views/Admin/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Admin/Index.cshtml
@@ -26,11 +26,11 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>App Tenant List</h3>
+                    <h3>Organization List</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="/Admin"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Admin</li>
-                        <li class="breadcrumb-item active">App Tenant</li>
+                        <li class="breadcrumb-item active">Organization</li>
                     </ol>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header align-items-center d-flex">
-                        <h4 class="card-title mb-0 flex-grow-1">Create New Tenant</h4>
+                        <h4 class="card-title mb-0 flex-grow-1">Create New Organization</h4>
                     </div>
                     <div class="card-body">
                         <form class="create-form" novalidate="" method="post" enctype="multipart/form-data">
