--- a/PMS-PropertyHapa.Admin/Views/Payments/PaidPayments.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Payments/PaidPayments.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "PaidPayments";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="page-body">
@@ -8,7 +8,7 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Coming Soon</h3>
+                    <h3>Piad Payments</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Coming Soon</li>
@@ -152,3 +152,4 @@
         </div>
     </div>
 </div>
+
