--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -159,13 +159,13 @@
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper">
-                        <a href="@Url.Action("Index","Home")">
+                        <a href="@Url.Action("Index","Dashboard")">
                             <img class="img-fluid for-light" src="~/Dashboard/assets/images/logo/Logo-01.jpg" alt="" style="width: 252px;height: 66px;">
                             <img class="img-fluid for-dark" src="~/Dashboard/assets/images/logo/Logo-01.jpg" alt="" style="width: 252px;height: 66px;">
                         </a>
                         <div class="back-btn"><i class="fa fa-angle-left"></i></div>
                     </div>
-                    <div class="logo-icon-wrapper"><a href="@Url.Action("Index","Home")"><img class="img-fluid" src="~/Dashboard/assets/images/logo-icon.png" alt=""></a></div>
+                    <div class="logo-icon-wrapper"><a href="@Url.Action("Index","Dashboard")"><img class="img-fluid" src="~/Dashboard/assets/images/logo-icon.png" alt=""></a></div>
                     <nav class="sidebar-main">
                         <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
                         <div id="sidebar-menu">
