--- a/PMS-PropertyHapa.Admin/Views/Groups/Update.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Groups/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model PMS_PropertyHapa.Admin.Data.RoleEdit
+﻿@model PMS_PropertyHapa.Migration.Data.RoleEdit
 @{
     ViewData["Title"] = "UPDATE ROLE";
 }
@@ -19,7 +19,7 @@
         }
         else
         {
-            @foreach (PMS_PropertyHapa.Admin.Data.ApplicationUser user in Model.NonMembers)
+            @foreach (PMS_PropertyHapa.Models.Roles.ApplicationUser user in Model.NonMembers)
             {
                 <tr>
                     <td>@user.UserName</td>
@@ -39,7 +39,7 @@
         }
         else
         {
-            @foreach (PMS_PropertyHapa.Admin.Data.ApplicationUser user in Model.Members)
+            @foreach (PMS_PropertyHapa.Models.Roles.ApplicationUser user in Model.Members)
             {
                 <tr>
                     <td>@user.UserName</td>
