--- a/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using PMS_PropertyHapa.Admin.Data
+@using PMS_PropertyHapa.Models.Roles
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @using Microsoft.AspNetCore.Http
