--- a/PMS-PropertyHapa/Views/User/Update.cshtml
+++ b/PMS-PropertyHapa/Views/User/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model PMS_PropertyHapa.Admin.Data.ApplicationUser
+﻿@model PMS_PropertyHapa.Models.Roles.ApplicationUser
 @{
 	ViewData["Title"] = "Update User";
     Layout = "~/Views/Shared/_Layout.cshtml";
