--- a/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
@@ -509,6 +509,9 @@
     <script src="~/Dashboard/assets/js/typeahead-search/handlebars.js"></script>
     <script src="~/Dashboard/assets/js/typeahead-search/typeahead-custom.js"></script>
     <script src="~/Dashboard/assets/js/height-equal.js"></script>
+    <script src="~/Dashboard/assets/js/sidebar-menu.js"></script>
+    <script src="~/Dashboard/assets/js/form-wizard/form-wizard-three.js"></script>
+    <script src="~/Dashboard/assets/js/form-wizard/jquery.backstretch.min.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="~/Dashboard/assets/js/script.js"></script>
