--- a/PMS-PropertyHapa/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Roles List</h3>
+                    <h3>Tenant List</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="/Tenant/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Tenant</li>
